fixed style issue with YT embed climbing over my site header with z-index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,6 +82,7 @@
         position: sticky;
         top: 0;
     }
+    z-index: 100;
     
 }
 
